just the basic start

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,27 @@
 name = "tiny-kv"
 version = "0.1.1"
 edition = "2021"
+rust-version = "1.70"
+description = "A tiny key/value store."
+keywords = ["keys", "k/v-store", "secrets" ]
+license = "MIT OR Apach-2.0"
+readme = "README.md"
+homepage = "https://github.com/darrylwest/tiny-kv"
+repository = "https://github.com/darrylwest/tiny-kv"
+exclude = [ ".github/*" ]
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
+clap = { version = "4.4.8", features = ["derive"] }
+log = "0.4.20"
+log4rs = "1.2.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_derive = "1.0"
+toml = "0.8.8"
+ascii = "1.1.0"
+hashbrown = { version = "0.14.2", features = ["serde"] }
+base64 = "0.21.5"
